[gd_scene load_steps=7 format=2]

[ext_resource path="res://scripts/construction system.gd" type="Script" id=1]
[ext_resource path="res://sprites/models/walls/wall_basic.png" type="Texture" id=2]
[ext_resource path="res://sprites/interface/bars/energy_bar_bg.png" type="Texture" id=3]
[ext_resource path="res://sprites/interface/bars/energy_bar_fill.png" type="Texture" id=4]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 32, 32 )

[sub_resource type="CircleShape2D" id=2]
radius = 107.38

[node name="tower" type="StaticBody2D"]
script = ExtResource( 1 )

[node name="sprite" type="Sprite" parent="."]
texture = ExtResource( 2 )

[node name="hitbox" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="build_area" type="Area2D" parent="."]

[node name="build_shape" type="CollisionShape2D" parent="build_area"]
visible = false
shape = SubResource( 2 )

[node name="timer" type="Timer" parent="build_area"]

[node name="progress_bar" type="MarginContainer" parent="."]
margin_left = -27.8713
margin_top = -49.4858
margin_right = 220.129
margin_bottom = -9.48581
rect_scale = Vector2( 0.220113, 0.275387 )

[node name="bar" type="HBoxContainer" parent="progress_bar"]
margin_right = 248.0
margin_bottom = 40.0

[node name="gauge" type="TextureProgress" parent="progress_bar/bar"]
margin_right = 248.0
margin_bottom = 40.0
value = 50.0
texture_under = ExtResource( 3 )
texture_progress = ExtResource( 4 )
[connection signal="body_entered" from="build_area" to="." method="_on_build_area_body_entered"]
[connection signal="body_exited" from="build_area" to="." method="_on_build_area_body_exited"]
[connection signal="input_event" from="build_area" to="." method="_on_build_area_input_event"]
